# NihongoFun

./: README.md  pyproject.toml
src/nihongofun/: __init__.py  imgreader.py
