[project]
name = "nihongofun"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DerekW3", email = "92753567+DerekW3@users.noreply.github.com" }
]
dependencies = [
    "easyocr>=1.7.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nihongofun"]
